Open Insert > Field > Other > Cross reference tab. Filter Selection using Textbox. Click anywhere else outside the dialog. Select the dialog again. Filter string is still there but filter isn't active.
Update: The dialog is located in Insert > Cross Reference. Patch: https://gerrit.libreoffice.org/#/c/22681/
Akshay Deep committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=9729c112a082d807b5703f51c34dd0d7ddf094bf tdf#98169 - Cross reference tab filter releases filter when refocused It will be available in 5.2.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.