tdf#98169 - Cross reference tab filter releases filter when refocused

Change-Id: Id77fad1dd84a4ea18ac69eeb6aaee39042017b6d